Fri Aug  7 11:41:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Added fixed only to Service_Config_Stream_Test, still crashes
          at shutdown

Fri Aug  7 06:26:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          Only C++ Builder 2009 will work, all other versions of C++ Builder are
          deprecated and there are no plans to get possible newer versions supported

Thu Aug  6 13:45:29 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_Memory.h (ACE_throw_bad_alloc): Changed return (void *) 0
          to simply return 0.  Thanks to Johnny Willemsen for reporting
          this.

Thu Aug  6 06:45:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Removed fixed only from Service_Config_Stream_Test

Wed Aug  5 23:28:43 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Parse_Node.cpp: When applying the modules in a dynamic
          stream, note that they were link()ed in reverse order from what
          the order is from the svc.conf file. So reverse the order when
          pushing them on the stream. Fixes Bugzilla #3721.

        * tests/Service_Config_Stream_Test.cpp:
        * tests/Service_Config_Stream_Test.conf: Added, and commented out, a
          test case for inserting a static module in the dynamic stream. It
          doesn't work, but it probably should. I'm not sure why it doesn't,
          and don't have more time to chase this right now. It's not part of
          Bugzilla 3721 or my customer's case, and this feature has probably
          never been tested and may have never worked, even pre-Gestalt, per
          Doug's recollection that Service Config was not intended to be
          used in this way. If someone has time to work this, please go ahead.

Wed Aug  5 09:40:40 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-7.h: