@@ -783,26 +783,6 @@ Compiler_Features_07_Test_LDADD = \
 
 endif !BUILD_ACE_FOR_TAO
 
-## Makefile.Compiler_Features_08_Test.am
-
-if !BUILD_ACE_FOR_TAO
-
-noinst_PROGRAMS += Compiler_Features_08_Test
-
-Compiler_Features_08_Test_CPPFLAGS = \
-  -I$(ACE_ROOT) \
-  -I$(ACE_BUILDDIR)
-
-Compiler_Features_08_Test_SOURCES = \
-  $(ACE_ROOT)/tests/Main.cpp \
-  Compiler_Features_08_Test.cpp
-
-Compiler_Features_08_Test_LDADD = \
-  libTest_Output.la \
-  $(ACE_BUILDDIR)/ace/libACE.la
-
-endif !BUILD_ACE_FOR_TAO
-
 ## Makefile.Compiler_Features_09_Test.am
 
 if !BUILD_ACE_FOR_TAO
