@@ -72,7 +72,6 @@ Compiler_Features_04_Test
 Compiler_Features_05_Test
 Compiler_Features_06_Test
 Compiler_Features_07_Test
-Compiler_Features_08_Test
 Compiler_Features_09_Test
 Compiler_Features_11_Test
 Compiler_Features_12_Test
