@@ -499,13 +499,6 @@ project(Compiler_Features_07_Test) : acetest {
   }
 }
 
-project(Compiler_Features_08_Test) : acetest {
-  exename = Compiler_Features_08_Test
-  Source_Files {
-    Compiler_Features_08_Test.cpp
-  }
-}
-
 project(Compiler_Features_09_Test) : acetest {
   exename = Compiler_Features_09_Test
   Source_Files {
